hphp/hack/test/typecheck/test_toplevel_stmt_in_braced_namespace.php.exp
File "test_toplevel_stmt_in_braced_namespace.php", line 6, characters 3-12:
Toplevel statements are not allowed in strict files (Parsing[1002])
